fixed on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-/* .container {
-  padding: 140px;
-} */
 
+/*
 @media screen and (min-width: 1201px) {
   .container {
+    width: 1000px;
+    height: 1000px;
     padding: 140px;
   }
 }
@@ -12,10 +12,9 @@
   .container {
     padding: 60px;
   }
-}
+} */
 
 .ball {
-  margin: auto;
   background-color: black;
   color: white;
   text-align: center;
@@ -24,19 +23,19 @@
   width: 200px;
   height: 200px;
   padding: 20%;
-
-  box-shadow: 0 80px 10px rgba(0,0,0,0.4), 0 30px 50px rgba(0,0,0,0.25);
+  margin: 100px auto;
+  box-shadow: 0 50px 10px rgba(0,0,0,0.3), 0 30px 50px rgba(0,0,0,0.3);
 }
 
 .input {
   height: 40px;
-  width: 200px;
+  width: 180px;
   font-size: 20px;
   font-family: sans-serif;
   text-align: center;
   color: white;
-  margin: 0 auto;
   background-color: black;
+  margin-top: 10px;
 }
 
 @media screen and (min-width: 1201px) {
